--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>schoolproxy by schoolproxy</title>
+    <title>schoolproxy</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-dark.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -18,15 +18,6 @@
 
   </head>
   <body>
-      <div id="header">
-        <nav>
-          <li class="fork"><a href="https://github.com/schoolproxy/schoolproxy">View On GitHub</a></li>
-          <li class="downloads"><a href="https://github.com/schoolproxy/schoolproxy/zipball/master">ZIP</a></li>
-          <li class="downloads"><a href="https://github.com/schoolproxy/schoolproxy/tarball/master">TAR</a></li>
-          <li class="title">DOWNLOADS</li>
-        </nav>
-      </div><!-- end header -->
-
     <div class="wrapper">
 
       <section>
