--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
       <section>
         <div id="title">
-          <h1>schoolproxy</h1>
-          <p>schoolproxy</p>
+          <h1>School Proxy</h1>
+          <p>because I can't think of creative names.</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/schoolproxy">schoolproxy</a></span>
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
