--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>schoolproxy</title>
+    <title>Schoolproxy</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-dark.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -39,3 +39,19 @@
     
   </body>
 </html>
+
+<div class="flash">   
+
+     <object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,0,0" width="960" height="540">
+            <param name="movie" value="http://onemorelevel.com/static/games3/business-simulator.swf">
+            <param name="quality" value=high>
+            <embed src="http://onemorelevel.com/static/games3/business-simulator.swf" quality="high" pluginspage="http://www.macromedia.com/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash" type="application/x-shockwave-flash" width="960" height="540"></embed> 
+          </object>
+</div>
+        <br />
+      
+
+       <center>  </center><br /><br>
+       <br>
+       <center>
+<script type="text/javascript">
