--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
      <object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,0,0" width="960" height="540" align="middle">
             <param name="movie" value="http://onemorelevel.com/static/games3/onelevel2.swf">
             <param name="quality" value=high>
-            <embed src="http://onemorelevel.com/static/games3/onelevel2.swf" quality="high" pluginspage="http://www.macromedia.com/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash" type="application/x-shockwave-flash" width="800" height="500" align="middle"></embed> 
+            <embed src="http://onemorelevel.com/static/games3/onelevel2.swf" quality="high" pluginspage="http://www.macromedia.com/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash" type="application/x-shockwave-flash" width="800" height="500" style="vertical-align:middle"></embed> 
           </object>
 </div>
         <br />
