--- a/fromwix.html
+++ b/fromwix.html
@@ -29,7 +29,7 @@
         </div>
 
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Fully escape that cringe-worthy old website by clicking <a href="http://schoolproxy.github.io">here</a>.</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Fully escape that cringe-worthy old website by clicking <a href="http://schoolproxy.github.io/main/">here</a>.</h3>
 
 <p>Doesn't this new site look much better? See the ad below this? Me neither.</p>
 
