--- a/fromwix.html
+++ b/fromwix.html
@@ -16,11 +16,14 @@
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-  </head>
+ </head>
   <body>
     <div class="wrapper">
 
-      
+      <section>
+        <div id="title">
+          <hr>
+        </div>
 
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Fully escape that cringe-worthy old website by clicking <a href="http://schoolproxy.github.io/main/">here</a>.</h3>
