--- a/index.html
+++ b/index.html
@@ -22,15 +22,19 @@
 
       <section>
         <div id="title">
-          <h1>School Proxy</h1>
-          <p>because I can't think of creative names.</p>
           <hr>
         </div>
 
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>You got here quickly.</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to the new website.</h3>
 
-<p>Please wait, this page is currently under construction. However, if the code works, there should be a game below.</p>
+<p>Page directory:
+<ul style="list-style-type:disc">
+  <li>Coffee</li>
+  <li>Tea</li>
+  <li>Milk</li>
+</ul>  
+</p>
 
       </section>
 
