--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to the new website.</h3>
 
-<p>Page directory:
+<p>Page directory (oldest-newest):
 <ul style="list-style-type:disc">
   <li>Coffee</li>
   <li>Tea</li>
