--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <p>Page directory (oldest-newest):
 <ul style="list-style-type:disc">
-  <li>Coffee</li>
+  <li><a href="http://schoolproxy.github.io/main/onlylevel.html">There is Only One Level</a></li>
   <li>Tea</li>
   <li>Milk</li>
 </ul>  
