Update and rename onlylevel.html to onlylevel2.html

--- a/onlylevel2.html
+++ b/onlylevel2.html
@@ -22,8 +22,7 @@
 
       <section>
         <div id="title">
-          <h1>School Proxy</h1>
-          <p>because I can't think of creative names.</p>
+          <h1>There is Only One Level 2</h1>
           <hr>
         </div>
 
@@ -31,14 +30,6 @@
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>You got here quickly.</h3>
 
 <p>YAY! Multiple pages: confirmed!</p>
-
-      </section>
-
-    </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
-  </body>
-</html>
 
 <div class="flash">   
 
@@ -55,3 +46,11 @@
        <br>
        <center>
 <script type="text/javascript">
+
+      </section>
+
+    </div>
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+    
+  </body>
+</html>
