--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
       <section>
         <div id="title">
+          <h1>Main</h1>
           <hr>
         </div>
 
@@ -30,7 +31,7 @@
 
 <p>Page directory (oldest-newest):
 <ul style="list-style-type:disc">
-  <li><a href="http://schoolproxy.github.io/main/onlylevel.html">There is Only One Level</a></li>
+  <li><a href="http://schoolproxy.github.io/main/onlylevel2.html">There is Only One Level 2</a></li>
 </ul>  
 </p>
 
