--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <p>Page directory (oldest-newest):
 <ul style="list-style-type:disc">
-  <li><a href="http://schoolproxy.github.io/main/onlylevel2.html">There is Only One Level 2</a></li>
+  <li><a href="http://schoolproxy.github.io/main/onlylevel.swf">There is Only One Level</a></li>
 </ul>  
 </p>
 
