--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to the new website.</h3>
 
-<p>Page directory (oldest-newest):
+<p>Page directory:
 <ul style="list-style-type:disc">
   <li><a href="http://schoolproxy.github.io/main/onlylevel.swf">There is Only One Level</a></li>
 </ul>  
