--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
 <p>Page directory:
 <ul style="list-style-type:disc">
+  <li><a href="http://schoolproxy.github.io/main/shift.swf">Shift</a></li>
   <li><a href="http://schoolproxy.github.io/main/onlylevel.swf">There is Only One Level</a></li>
 </ul>  
 </p>
