push gamelot1 index

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
 
       <section>
         <div id="title">
-          <h1>Main</h1>
           <hr>
         </div>
 
@@ -31,8 +30,13 @@
 
 <p>Page directory:
 <ul style="list-style-type:disc">
-  <li><a href="http://schoolproxy.github.io/main/shift.swf">Shift</a></li>
+  <li><a href="http://schoolproxy.github.io/main/bloxorz.swf">Bloxorz</a></li>
+  <li><a href="http://schoolproxy.github.io/main/bowman2.swf">Bow Man 2</a></li>
+  <li><a href="http://schoolproxy.github.io/main/doom.swf">Doom</a></li>
+  <li><a href="http://schoolproxy.github.io/main/run.swf">Run</a></li>
+  <li><a href="http://schoolproxy.github.io/main/shift2.swf">Shift 2</a></li>
   <li><a href="http://schoolproxy.github.io/main/onlylevel.swf">There is Only One Level</a></li>
+  <li><a href="http://schoolproxy.github.io/main/hardestgame.swf">The World's Hardest Game</a></li>
 </ul>  
 </p>
 
