--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
   <li><a href="http://schoolproxy.github.io/main/shift2.swf">Shift 2</a></li>
   <li><a href="http://schoolproxy.github.io/main/onlylevel.swf">There is Only One Level</a></li>
   <li><a href="http://schoolproxy.github.io/main/hardestgame.swf">The World's Hardest Game</a></li>
+  <li><a href="http://schoolproxy.github.io/main/hardestgame2.swf">The World's Hardest Game 2</a></li>
 </ul>  
 </p>
 
