push html noextension fix

--- a/request.html
+++ b/request.html
@@ -27,7 +27,7 @@
 
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
-Nope, no page requests this time.</h3>
+Nope, no requests page this time.</h3>
 
 <p>If you give people a place to anonymously make comments, they <i>will</i> abuse it.</p>
 
