push tofors link

--- a/tofors.html
+++ b/tofors.html
@@ -26,7 +26,7 @@
         </div>
 
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>To be sent over to the unblocked copy of Rob Fors, click <a href="http://schoolproxy.github.io/fors/robfors.com/index.html">here</a>.</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>To be sent over to the unblocked copy of Rob Fors, click <a href="http://schoolproxy.github.io/main/fors/">here</a>.</h3>
 
 
       </section>
