--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <li><a href="http://schoolproxy.github.io/main/game/indestruct2tank.swf">IndestructoTank 2</a></li>
   <li><a href="http://schoolproxy.github.io/main/game/miniputt3.swf">Mini Put 3</a></li>
   <li><a href="http://schoolproxy.github.io/main/game/penaltyfever.swf">Penalty Fever</a></li>
-  <li><a href="http://schoolproxy.github.io/main/game/.swf">physballz</a>Physballz</li>
+  <li><a href="http://schoolproxy.github.io/main/game/physballz.swf">Physballz</a></li>
   <li><a href="http://schoolproxy.github.io/main/game/ragdollavalanche2.swf">Ragdoll Avalanche 2</a></li>
   <li><a href="http://schoolproxy.github.io/main/game/ragdollvolleyball.swf">Ragdoll Volleyball</a></li>
   <li><a href="http://schoolproxy.github.io/main/game/run.swf">Run</a></li>
