--- a/index.html
+++ b/index.html
@@ -31,49 +31,49 @@
 <p>Page directory:
 <ul style="list-style-type:disc">
   <li><a href="http://schoolproxy.github.io/main/game/achilles.swf">Achilles</a></li>
-  <li><a href="http://schoolproxy.github.io/main/game/ageofwar.swf">Age of War</a></li>
-  <li><a href="http://schoolproxy.github.io/main/game/ageofwar2.swf">Age of War 2</a></li>
-  <li><a href="http://schoolproxy.github.io/main/game/bloonstowerdefense4.swf">Bloons Tower Defense 4</a></li>
+  <li><a href="http://schoolproxy.github.io/main/game/ageOfWar.swf">Age of War</a></li>
+  <li><a href="http://schoolproxy.github.io/main/game/ageOfWar2.swf">Age of War 2</a></li>
+  <li><a href="http://schoolproxy.github.io/main/game/bloonsTowerDefense4.swf">Bloons Tower Defense 4</a></li>
   <li><a href="http://schoolproxy.github.io/main/game/bloxorz.swf">Bloxorz</a></li>
   <li><a href="http://schoolproxy.github.io/main/game/bowman2.swf">Bow Man 2</a></li>
-  <li><a href="http://schoolproxy.github.io/main/game/boxhead.swf">Box Head</a></li>
-  <li><a href="http://schoolproxy.github.io/main/game/bubblespinner.swf">Bubble Spinner</a></li>
-  <li><a href="http://schoolproxy.github.io/main/game/bubbletanks2.swf">Bubble Tanks 2</a></li>
-  <li><a href="http://schoolproxy.github.io/main/game/coolwest.swf">Cool West</a></li>
-  <li><a href="http://schoolproxy.github.io/main/game/crushthecastle.swf">Crush the Castle</a></li>
-  <li><a href="http://schoolproxy.github.io/main/game/crushthecastleplayerspack.swf">Crush the Castle Players Pack</a></li>
-  <li><a href="http://schoolproxy.github.io/main/game/crushthecastle2.swf">Crush the Castle 2</a></li>
-  <li><a href="http://schoolproxy.github.io/main/game/crushthecastle2playerspack.swf">Crush the Castle 2 Players Pack</a></li>
+  <li><a href="http://schoolproxy.github.io/main/game/boxHead.swf">Box Head</a></li>
+  <li><a href="http://schoolproxy.github.io/main/game/bubbleSpinner.swf">Bubble Spinner</a></li>
+  <li><a href="http://schoolproxy.github.io/main/game/bubbleTanks2.swf">Bubble Tanks 2</a></li>
+  <li><a href="http://schoolproxy.github.io/main/game/coolWest.swf">Cool West</a></li>
+  <li><a href="http://schoolproxy.github.io/main/game/crushTheCastle.swf">Crush the Castle</a></li>
+  <li><a href="http://schoolproxy.github.io/main/game/crushTheCastlePlayersPack.swf">Crush the Castle Players Pack</a></li>
+  <li><a href="http://schoolproxy.github.io/main/game/crushTheCastle2.swf">Crush the Castle 2</a></li>
+  <li><a href="http://schoolproxy.github.io/main/game/crushTheCastle2PlayersPack.swf">Crush the Castle 2 Players Pack</a></li>
   <li><a href="http://schoolproxy.github.io/main/game/cursor10.swf">Cursor</a></li>
   <li><a href="http://schoolproxy.github.io/main/game/doom.swf">Doom</a></li>
-  <li><a href="http://schoolproxy.github.io/main/game/electricman2.swf">Electric Man 2</a></li>
+  <li><a href="http://schoolproxy.github.io/main/game/electricMan2.swf">Electric Man 2</a></li>
   <li><a href="http://schoolproxy.github.io/main/game/fragger.swf">Fragger</a></li>
-  <li><a href="http://schoolproxy.github.io/main/game/gardeninvader.swf">Garden Invader</a></li>
-  <li><a href="http://schoolproxy.github.io/main/game/happywheelsdemo.swf">Happy Wheels Demo</a></li>
-  <li><a href="http://schoolproxy.github.io/main/game/indestructotank.swf">IndestructoTank</a></li>
-  <li><a href="http://schoolproxy.github.io/main/game/indestruct2tank.swf">IndestructoTank 2</a></li>
-  <li><a href="http://schoolproxy.github.io/main/game/miniputt3.swf">Mini Put 3</a></li>
-  <li><a href="http://schoolproxy.github.io/main/game/penaltyfever.swf">Penalty Fever</a></li>
+  <li><a href="http://schoolproxy.github.io/main/game/gardenInvader.swf">Garden Invader</a></li>
+  <li><a href="http://schoolproxy.github.io/main/game/happyWheelsDemo.swf">Happy Wheels Demo</a></li>
+  <li><a href="http://schoolproxy.github.io/main/game/indestructoTank.swf">IndestructoTank</a></li>
+  <li><a href="http://schoolproxy.github.io/main/game/indestruct2Tank.swf">IndestructoTank 2</a></li>
+  <li><a href="http://schoolproxy.github.io/main/game/miniPutt3.swf">Mini Put 3</a></li>
+  <li><a href="http://schoolproxy.github.io/main/game/penaltyFever.swf">Penalty Fever</a></li>
   <li><a href="http://schoolproxy.github.io/main/game/physballz.swf">Physballz</a></li>
-  <li><a href="http://schoolproxy.github.io/main/game/ragdollavalanche2.swf">Ragdoll Avalanche 2</a></li>
-  <li><a href="http://schoolproxy.github.io/main/game/ragdollvolleyball.swf">Ragdoll Volleyball</a></li>
+  <li><a href="http://schoolproxy.github.io/main/game/ragdollAvalanche2.swf">Ragdoll Avalanche 2</a></li>
+  <li><a href="http://schoolproxy.github.io/main/game/ragdollVolleyball.swf">Ragdoll Volleyball</a></li>
   <li><a href="http://schoolproxy.github.io/main/game/run.swf">Run</a></li>
   <li><a href="http://schoolproxy.github.io/main/game/shift.swf">Shift</a></li>
   <li><a href="http://schoolproxy.github.io/main/game/shift2.swf">Shift 2</a></li>
-  <li><a href="http://schoolproxy.github.io/main/game/simtaxi.swf">Sim Taxi</a></li>
-  <li><a href="http://schoolproxy.github.io/main/game/slender2d.swf">Slender 2D</a></li>
-  <li><a href="http://schoolproxy.github.io/main/game/slender2d-sanatorium.swf">Slender 2D-Sanatorium</a></li>
-  <li><a href="http://schoolproxy.github.io/main/game/sportsheads-football.swf">SportsHeads-Football</a></li>
-  <li><a href="http://schoolproxy.github.io/main/game/sportsheads-tennis.swf">SportsHeads-Tennis</a></li>
-  <li><a href="http://schoolproxy.github.io/main/game/strikeforceheroes.swf">Strike Force Heroes</a></li>
-  <li><a href="http://schoolproxy.github.io/main/game/superstacker.swf">Super Stacker</a></li>
-  <li><a href="http://schoolproxy.github.io/main/game/superstacker2.swf">Super Stacker 2</a></li>
-  <li><a href="http://schoolproxy.github.io/main/game/supremedeerhunting.swf">Supreme Deer Hunting</a></li>
-  <li><a href="http://schoolproxy.github.io/main/game/territorywar2.swf">Territory War 2</a></li>
-  <li><a href="http://schoolproxy.github.io/main/game/tetrishell.swf">Tetris Hell</a></li>
+  <li><a href="http://schoolproxy.github.io/main/game/simTaxi.swf">Sim Taxi</a></li>
+  <li><a href="http://schoolproxy.github.io/main/game/slender2D.swf">Slender 2D</a></li>
+  <li><a href="http://schoolproxy.github.io/main/game/slender2D-sanatorium.swf">Slender 2D-Sanatorium</a></li>
+  <li><a href="http://schoolproxy.github.io/main/game/sportsHeads-football.swf">SportsHeads-Football</a></li>
+  <li><a href="http://schoolproxy.github.io/main/game/sportsHeads-tennis.swf">SportsHeads-Tennis</a></li>
+  <li><a href="http://schoolproxy.github.io/main/game/strikeForceHeroes.swf">Strike Force Heroes</a></li>
+  <li><a href="http://schoolproxy.github.io/main/game/superStacker.swf">Super Stacker</a></li>
+  <li><a href="http://schoolproxy.github.io/main/game/superStacker2.swf">Super Stacker 2</a></li>
+  <li><a href="http://schoolproxy.github.io/main/game/supremeDeerHunting.swf">Supreme Deer Hunting</a></li>
+  <li><a href="http://schoolproxy.github.io/main/game/territoryWar2.swf">Territory War 2</a></li>
+  <li><a href="http://schoolproxy.github.io/main/game/tetrisHell.swf">Tetris Hell</a></li>
   <li><a href="http://schoolproxy.github.io/main/game/onlylevel.swf">There is Only One Level</a></li>
   <li><a href="http://schoolproxy.github.io/main/game/hardestgame.swf">The World's Hardest Game</a></li>
-  <li><a href="http://schoolproxy.github.io/main/game/wakeupthebox.swf">Wake Up the Box</a></li>
+  <li><a href="http://schoolproxy.github.io/main/game/wakeUpTheBox.swf">Wake Up the Box</a></li>
 </ul>  
 </p>
 
