push gardenInventor_fix

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <li><a href="http://schoolproxy.github.io/main/game/doom.swf">Doom</a></li>
   <li><a href="http://schoolproxy.github.io/main/game/electricMan2.swf">Electric Man 2</a></li>
   <li><a href="http://schoolproxy.github.io/main/game/fragger.swf">Fragger</a></li>
-  <li><a href="http://schoolproxy.github.io/main/game/gardenInvader.swf">Garden Invader</a></li>
+  <li><a href="http://schoolproxy.github.io/main/game/gardenInventor.swf">Garden Inventor</a></li>
   <li><a href="http://schoolproxy.github.io/main/game/happyWheelsDemo.swf">Happy Wheels Demo</a></li>
   <li><a href="http://schoolproxy.github.io/main/game/indestructoTank.swf">IndestructoTank</a></li>
   <li><a href="http://schoolproxy.github.io/main/game/indestruct2Tank.swf">IndestructoTank 2</a></li>
