push miniputt fix

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <li><a href="http://schoolproxy.github.io/main/game/happyWheelsDemo.swf">Happy Wheels Demo</a></li>
   <li><a href="http://schoolproxy.github.io/main/game/indestructoTank.swf">IndestructoTank</a></li>
   <li><a href="http://schoolproxy.github.io/main/game/indestruct2Tank.swf">IndestructoTank 2</a></li>
-  <li><a href="http://schoolproxy.github.io/main/game/miniPutt3.swf">Mini Put 3</a></li>
+  <li><a href="http://schoolproxy.github.io/main/game/miniPutt3.swf">Mini Putt 3</a></li>
   <li><a href="http://schoolproxy.github.io/main/game/penaltyFever.swf">Penalty Fever</a></li>
   <li><a href="http://schoolproxy.github.io/main/game/physballz.swf">Physballz</a></li>
   <li><a href="http://schoolproxy.github.io/main/game/ragdollAvalanche2.swf">Ragdoll Avalanche 2</a></li>
