push game/index accidentfix

--- a/game/index.html
+++ b/game/index.html
@@ -26,8 +26,9 @@
         </div>
 
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to the new website.</h3>
-
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>You've somehow stumbled upon this crappily formated version of the main website. Good job.</h3>
+<h4>If you just got lost, <a href="http://schoolproxy.github.io/main/">click here</a> to go to the actual website.</h4>
+  
 <p>Games list:
 <ul style="list-style-type:disc">
   <li><a href="http://schoolproxy.github.io/main/game/achilles.swf">Achilles</a></li>
