push redir_fromwix

--- a/fromwix.html
+++ b/fromwix.html
@@ -1,39 +1,1 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Schoolproxy</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-dark.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/respond.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <!--[if lt IE 8]>
-    <link rel="stylesheet" href="stylesheets/ie.css">
-    <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-
- </head>
-  <body>
-    <div class="wrapper">
-
-      <section>
-        <div id="title">
-          <hr>
-        </div>
-
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Fully escape that cringe-worthy old website by clicking <a href="http://schoolproxy.github.io/main/">here</a>.</h3>
-
-<p>Doesn't this new site look much better? See the ad below this? Me neither.</p>
-
-      </section>
-
-    </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
-  </body>
-</html>
+<meta http-equiv="refresh" content="0; url=http://schoolproxy.github.io/main" />
