--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
   <li><a href="http://schoolproxy.github.io/main/game/territoryWar2.swf">Territory War 2</a></li>
   <li><a href="http://schoolproxy.github.io/main/game/tetrisHell.swf">Tetris Hell</a></li>
   <li><a href="http://schoolproxy.github.io/main/game/onlylevel.swf">There is Only One Level</a></li>
+  <li><a href="http://schoolproxy.github.io/main/game/onelevel2.swf">There is Only One Level 2</a></li>
   <li><a href="http://schoolproxy.github.io/main/game/hardestgame.swf">The World's Hardest Game</a></li>
   <li><a href="http://schoolproxy.github.io/main/game/wakeUpTheBox.swf">Wake Up the Box</a></li>
 </ul>  
