--- a/dillon.html
+++ b/dillon.html
@@ -23,8 +23,8 @@
 <hr>
 </div>
 <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>f off dillon</h3>
-<p>i want to burn</p>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>HIYA BRENDANS@!!!!!!!!!!!!!!! MEMESSS!!! xDDDDDDDDDDDDDDDDDD</h3>
+<p>Proud sponcered by /r/undertail</p>
 </section>
 </div>
 <!--[if !IE]><script>fixScale(document);</script><![endif]-->
