--- a/bren.html
+++ b/bren.html
@@ -24,7 +24,7 @@
 </div>
 <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>HIYA BRENDANS@!!!!!!!!!!!!!!! MEMESSS!!! xDDDDDDDDDDDDDDDDDD</h3>
-<p>Proud sponcered by /r/undertail</p>
+<p>Proud sponcered by /r/undertail!</p>
 </section>
 </div>
 <!--[if !IE]><script>fixScale(document);</script><![endif]-->
